fixing image stretch

--- a/style.css
+++ b/style.css
@@ -670,6 +670,7 @@ button:active {
 .About--Me{
     display: flex;
     flex-direction: row;
+    height: 100vh;
 }
 
 .About--Container{
